# llm-agent

./: .gitignore  LICENSE  README.md  errata.md  make-langchain-ai-docs-db.ipynb  updates.md
.github/ISSUE_TEMPLATE/: error_report.md
chapter02/: notebook.ipynb  requirements.txt
chapter03/: notebook.ipynb  requirements.txt
chapter04/: notebook.ipynb  requirements.txt
chapter05/: notebook.ipynb  requirements.txt
chapter06/: notebook.ipynb  requirements.txt
chapter07/: annotated_code.py  notebook.ipynb
chapter09/: checkpoint.ipynb  checkpoint_requirements.txt  hands_on.ipynb  hands_on_requirements.txt  notebook.ipynb  pyproject.toml  requirements.txt
chapter09/json_file_saver/: main.py
chapter10/: README.md  documentation_agent_architecture.md  documentation_agent_flow_analysis.md  notebook.ipynb  notebook_requirements.txt  pyproject.toml  requirements.txt
chapter10/documentation_agent/: main.py
chapter11/: README.md  pattern-selection-diagram.md
chapter12/: .env.sample  EXECUTION_RESULTS.md  GUIDE.md  README.md  notebook.ipynb  pyproject.toml  requirements.txt  settings.py
chapter12/common/: reflection_manager.py
chapter12/cross_reflection/: FLOW_DETAILED.md  main.py
chapter12/multi_path_plan_generation/: FLOW_DETAILED.md  main.py
chapter12/passive_goal_creator/: FLOW_DETAILED.md  main.py
chapter12/prompt_optimiser/: main.py
chapter12/prompt_optimizer/: FLOW_DETAILED.md  main.py
chapter12/response_optimizer/: FLOW_DETAILED.md  main.py
chapter12/role_based_cooperation/: FLOW_DETAILED.md  main.py
chapter12/self_reflection/: FLOW_DETAILED.md  main.py
chapter12/single_path_plan_generation/: FLOW_DETAILED.md  FLOW_GUIDE.md  main.py
etc/: json_checker.py
