[tool.poetry]
name = "agent-book-chapter12"
version = "1.0.0"
description = ""
authors = ["Masahiro Nishimi <nishimi@generative-agents.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-core = "^0.2.22"
langchain-community = "^0.2.9"
langgraph = "0.1.8"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.17"
numpy = "1.26.*"
faiss-cpu = "^1.8.0.post1"
langchain-anthropic = "^0.1.20"
pydantic-settings = "^2.3.4"
retry = "^0.9.2"
decorator = "4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
